--- a/bots/echo/package.json
+++ b/bots/echo/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpresshub/chat": "workspace:*"
   },
