--- a/bots/sheetzy/package.json
+++ b/bots/sheetzy/package.json
@@ -12,6 +12,7 @@
     "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpresshub/gsheets": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
