--- a/integrations/airtable/package.json
+++ b/integrations/airtable/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*"
   }
 }
