--- a/integrations/charts/package.json
+++ b/integrations/charts/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.2"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "chart.js": "^3.9.1"
   }
