--- a/integrations/line/package.json
+++ b/integrations/line/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.39.1"
   }
