--- a/integrations/pdf-generator/package.json
+++ b/integrations/pdf-generator/package.json
@@ -12,6 +12,7 @@
     "marked": "^13.0.2"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*"
   }
 }
