--- a/bots/hello-world/package.json
+++ b/bots/hello-world/package.json
@@ -15,6 +15,7 @@
     "qs": "^6.11.0"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpresshub/logger": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
