--- a/integrations/browser/package.json
+++ b/integrations/browser/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.2"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*"
   }
 }
