--- a/integrations/chat/package.json
+++ b/integrations/chat/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@botpress/chat-api": "workspace:*",
+    "@botpress/cli": "workspace:*",
     "@types/json-schema": "^7.0.12",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/lodash": "^4.14.191",
