--- a/integrations/clickup/package.json
+++ b/integrations/clickup/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*"
   }
 }
