--- a/integrations/gmail/package.json
+++ b/integrations/gmail/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@sentry/cli": "^2.39.1",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "^18.3.11",
