--- a/integrations/gsheets/package.json
+++ b/integrations/gsheets/package.json
@@ -14,6 +14,7 @@
     "googleapis": "^144.0.0"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.39.1"
   }
