--- a/integrations/sunco/package.json
+++ b/integrations/sunco/package.json
@@ -15,6 +15,7 @@
     "sunshine-conversations-client": "^9.12.0"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.39.1"
   }
