--- a/integrations/webhook/package.json
+++ b/integrations/webhook/package.json
@@ -16,6 +16,7 @@
     "qs": "^6.11.0"
   },
   "devDependencies": {
+    "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.39.1",
     "@types/qs": "^6.9.7"
