chore: attempt at fixing turbo remote caching problem (#13499)

--- a/turbo.json
+++ b/turbo.json
@@ -5,24 +5,24 @@
       "outputs": ["src/gen/**"],
       "dependsOn": ["^generate"]
     },
+    "build": {
+      "outputs": ["bp_modules/**", ".botpress/**"],
+      "dependsOn": ["generate", "^build"]
+    },
     "@botpress/client#build": {
       "outputs": ["dist/**"],
-      "dependsOn": ["generate"]
+      "dependsOn": ["generate", "^build"]
     },
     "@botpress/chat#build": {
       "outputs": ["dist/**"],
-      "dependsOn": ["generate"]
+      "dependsOn": ["generate", "^build"]
     },
     "@botpress/sdk#build": {
       "outputs": ["dist/**"],
-      "dependsOn": ["@botpress/client#build"]
+      "dependsOn": ["generate", "^build"]
     },
     "@botpress/cli#build": {
       "outputs": ["dist/**", "templates/*/.botpress/**"],
-      "dependsOn": ["@botpress/client#build", "@botpress/sdk#build"]
-    },
-    "build": {
-      "outputs": ["bp_modules/**", ".botpress/**"],
       "dependsOn": ["generate", "^build"]
     },
     "check:type": {},
