--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:format && pnpm fix:lint"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.564.0",
     "@botpress/cli": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@bpinternal/depsynky": "^0.0.2",
