--- a/.github/workflows/run-chat-tests.yml
+++ b/.github/workflows/run-chat-tests.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
         with:
-          filter: '@botpress/cli'
+          extra_filters: '-F @botpresshub/chat -F @bp-bots/echo'
           turbo_team: ${{ secrets.TURBO_TEAM }}
           turbo_token: ${{ secrets.TURBO_TOKEN }}
       - name: Install tilt
