--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:format && pnpm fix:lint"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.564.0",
     "@botpress/cli": "workspace:*",
+    "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@bpinternal/depsynky": "^0.0.2",
+    "@bpinternal/readiness": "^0.0.16",
     "@types/node": "^18.19.67",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
