Add interface dependency

--- a/integrations/sunco/package.json
+++ b/integrations/sunco/package.json
@@ -18,5 +18,8 @@
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.39.1"
+  },
+  "bpDependencies": {
+    "typing-indicator": "../../interfaces/typing-indicator"
   }
 }
