--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -173,10 +173,10 @@ runs:
 
             if [ $exists -eq 0 ]; then
                 echo -e "\nDeploying integration: ### $integration ###\n"
-                pnpm retry -n 2 -- pnpm -F $integration -c exec -- "$base_command"
+                pnpm retry -n 2 -- pnpm -F "@botpresshub/$integration" -c exec -- "$base_command"
             elif [ $redeploy -eq 1 ]; then
                 echo -e "\nRe-deploying integration: ### $integration ###\n"
-                pnpm retry -n 2 -- pnpm -F $integration -c exec -- "$base_command"
+                pnpm retry -n 2 -- pnpm -F "@botpresshub/$integration" -c exec -- "$base_command"
             else
                 echo -e "\nSkipping integration: ### $integration ###\n"
             fi
