--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,6 +21,7 @@
   "main": "dist/index.js",
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^11.7.0",
+    "@botpress/chat": "workspace:*",
     "@botpress/client": "0.37.1",
     "@botpress/sdk": "2.0.3",
     "@bpinternal/const": "^0.0.20",
