--- a/.github/workflows/run-client-tests.yml
+++ b/.github/workflows/run-client-tests.yml
@@ -8,7 +8,9 @@ permissions:
 
 jobs:
   run-client-tests:
-    runs-on: [ubuntu-latest, windows-latest]
+    runs-on:
+      - ubuntu-latest
+      - windows-latest
     timeout-minutes: 15
     env:
       NODE_OPTIONS: '--max_old_space_size=8192'
