--- a/.github/workflows/run-chat-tests.yml
+++ b/.github/workflows/run-chat-tests.yml
@@ -8,9 +8,10 @@ permissions:
 
 jobs:
   run-chat-tests:
-    runs-on:
-      - ubuntu-latest
-      - windows-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     timeout-minutes: 15
     env:
       NODE_OPTIONS: '--max_old_space_size=8192'
