--- a/.github/workflows/run-cli-tests.yml
+++ b/.github/workflows/run-cli-tests.yml
@@ -24,10 +24,10 @@ jobs:
           turbo_token: ${{ secrets.TURBO_TOKEN }}
       - shell: pwsh
         run: |
-          pnpm run -F cli test:e2e -v \
-            --api-url https://api.botpress.dev \
-            --workspace-id ${{ secrets.STAGING_E2E_TESTS_WORKSPACE_ID }} \
-            --workspace-handle clitests \
-            --token ${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }} \
-            --sdk-path "$(pwd)/packages/sdk" \
+          pnpm run -F cli test:e2e -v `
+            --api-url https://api.botpress.dev `
+            --workspace-id ${{ secrets.STAGING_E2E_TESTS_WORKSPACE_ID }} `
+            --workspace-handle clitests `
+            --token ${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }} `
+            --sdk-path "$(pwd)/packages/sdk" `
             --client-path "$(pwd)/packages/client"
