--- a/bots/echo/package.json
+++ b/bots/echo/package.json
@@ -14,6 +14,6 @@
     "@botpresshub/chat": "workspace:*"
   },
   "bpDependencies": {
-    "chat": "../../integrations/chat"
+    "chat": "..\\.\\integrations/chat"
   }
 }
