--- a/.github/workflows/run-chat-tests.yml
+++ b/.github/workflows/run-chat-tests.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
         with:
+          turbo_team: ${{ secrets.TURBO_TEAM }}
+          turbo_token: ${{ secrets.TURBO_TOKEN }}
           extra_filters: '-F @botpresshub/chat -F @bp-bots/echo -F @botpress/chat'
       - name: Install tilt
         run: curl -k -fsSL https://raw.githubusercontent.com/tilt-dev/tilt/master/scripts/install.sh | bash
