--- a/.github/workflows/run-cli-tests.yml
+++ b/.github/workflows/run-cli-tests.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
         with:
+          turbo_team: ${{ secrets.TURBO_TEAM }}
+          turbo_token: ${{ secrets.TURBO_TOKEN }}
           extra_filters: '-F @botpress/cli'
       - run: |
           pnpm run -F cli test:e2e -v \
