--- a/.github/workflows/run-client-tests.yml
+++ b/.github/workflows/run-client-tests.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
         with:
+          turbo_team: ${{ secrets.TURBO_TEAM }}
+          turbo_token: ${{ secrets.TURBO_TOKEN }}
           extra_filters: '-F @botpress/client'
       - run: |
           # pnpm -F client exec puppeteer browsers install chrome
