--- a/integrations/line/package.json
+++ b/integrations/line/package.json
@@ -19,5 +19,8 @@
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@sentry/cli": "^2.39.1"
+  },
+  "bpDependencies": {
+    "typingIndicator": "../../interfaces/typing-indicator"
   }
 }
