feat(zai): added zai, vai and wasm (#524)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bpinternal/zui",
-  "version": "0.13.3",
+  "version": "0.13.4",
   "description": "A fork of Zod with additional features",
   "type": "module",
   "source": "./src/index.ts",
@@ -31,7 +31,7 @@
     "@types/benchmark": "^2.1.5",
     "@types/jest": "^29.5.12",
     "@types/json-schema": "^7.0.15",
-    "@types/lodash": "^4.17.13",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.12.6",
     "@types/react": "^18.2.48",
     "@vitejs/plugin-react-swc": "^3.6.0",
@@ -40,6 +40,7 @@
     "benchmark": "^2.1.4",
     "jsdom": "^24.0.0",
     "local-ref-resolver": "^0.2.0",
+    "lodash-es": "^4.17.21",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -65,8 +66,5 @@
     "node": ">=16.0.0",
     "pnpm": "8.6.2"
   },
-  "packageManager": "pnpm@8.6.2",
-  "dependencies": {
-    "lodash": "^4.17.21"
-  }
+  "packageManager": "pnpm@8.6.2"
 }
