chore(integrations/todoist): add sentry

--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
+    "@botpress/sdk-addons": "workspace:*",
     "@doist/todoist-api-typescript": "^3.0.3",
     "axios": "^1.7.4"
   },
