Allow deployement with deprecated fields for Line until proactive user and conversation creation are implemented

--- a/.github/actions/deploy-integrations/action.yml
+++ b/.github/actions/deploy-integrations/action.yml
@@ -169,6 +169,8 @@ runs:
                 base_command="$base_command ${{ inputs.google_ai_secrets }}"
             elif [ $integration == "intercom" ]; then
                 base_command="$base_command ${{ inputs.intercom_secrets }} --allowDeprecated"
+            elif [ $integration == "line"]; then
+                base_command="$base_command --allowDeprecated"
             fi
 
             if [ $exists -eq 0 ]; then
