feat(ci): add oxlint

--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "check:sherif": "sherif -i zod -i axios -i query-string -i googleapis",
     "check:format": "prettier --check .",
     "check:eslint": "eslint ./ --ext .ts --ext .tsx",
-    "check:lint": "pnpm check:bplint && pnpm check:eslint",
+    "check:oxlint": "oxlint -c .oxlintrc.json",
+    "check:lint": "pnpm check:bplint && pnpm check:oxlint && pnpm check:eslint",
     "check:type": "turbo check:type",
     "fix:dep": "depsynky sync",
     "fix:sherif": "sherif -i zod -i axios -i query-string -i googleapis --fix",
     "fix:format": "prettier --write .",
+    "fix:oxlint": "oxlint -c .oxlintrc.json --fix --fix-suggestions",
     "fix:lint": "eslint --fix ./ --ext .ts --ext .tsx",
     "check": "pnpm check:sherif && pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
-    "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:format && pnpm fix:lint"
+    "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:oxlint && pnpm fix:format && pnpm fix:lint"
   },
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.564.0",
@@ -33,8 +35,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.6.4",
+    "eslint-plugin-oxlint": "^0.15.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "oxlint": "^0.15.5",
     "prettier": "^2.8.8",
     "retry-cli": "^0.7.0",
     "sherif": "1.0.1",
