--- a/.github/workflows/run-checks.yml
+++ b/.github/workflows/run-checks.yml
@@ -22,6 +22,7 @@ jobs:
           turbo_token: ${{ secrets.TURBO_TOKEN }}
       - run: pnpm run check:dep
       - run: pnpm run check:sherif
+      - run: pnpm run check:oxlint
       - run: pnpm run check:format
       - run: pnpm run check:eslint
       - run: pnpm run check:bplint
