--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "esbenp.prettier-vscode",
-    "oxc.oxc-vscode"
-  ]
+  "recommendations": ["esbenp.prettier-vscode", "oxc.oxc-vscode"]
 }
