--- a/packages/chat-client/package.json
+++ b/packages/chat-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botpress/chat",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "Botpress Chat API Client",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -25,7 +25,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@botpress/chat-api": "0.0.0",
+    "@botpress/chat-api": "workspace:*",
     "@types/event-source-polyfill": "^1.0.2",
     "@types/eventsource": "^1.1.12",
     "@types/json-schema": "^7.0.12",
