feat(integrations/todoist): add more actions

--- a/integrations/todoist/package.json
+++ b/integrations/todoist/package.json
@@ -18,7 +18,5 @@
     "@botpress/common": "workspace:*",
     "@botpresshub/creatable": "workspace:*"
   },
-  "bpDependencies": {
-    "creatable": "../../interfaces/creatable"
-  }
+  "bpDependencies": {}
 }
