--- a/integrations/dropbox/package.json
+++ b/integrations/dropbox/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@botpresshub/dropbox",
   "dependencies": {
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
@@ -8,7 +9,6 @@
     "@types/node": "^22.10.5",
     "typescript": "^5.6.3"
   },
-  "integrationName": "@botpresshub/dropbox",
   "private": true,
   "scripts": {
     "build": "bp add -y && bp build",
