--- a/integrations/instagram/package.json
+++ b/integrations/instagram/package.json
@@ -12,13 +12,17 @@
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
-    "messaging-api-messenger": "^1.1.0",
+    "axios": "^1.6.2",
+    "preact": "^10.23.1",
+    "preact-render-to-string": "^6.5.7",
+    "qs": "^6.11.0",
     "query-string": "^6.14.1"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
-    "@sentry/cli": "^2.39.1"
+    "@sentry/cli": "^2.39.1",
+    "@types/qs": "^6.9.7"
   },
   "bpDependencies": {
     "proactiveUser": "../../interfaces/proactive-user",
