--- a/bots/sinlin/package.json
+++ b/bots/sinlin/package.json
@@ -17,12 +17,14 @@
     "@botpress/cli": "workspace:*",
     "@botpress/common": "workspace:*",
     "@botpresshub/linear": "workspace:*",
+    "@botpresshub/synchronizer": "workspace:*",
     "@botpresshub/telegram": "workspace:*",
     "@bpinternal/genenv": "0.0.1",
     "@types/lodash": "^4.14.191"
   },
   "bpDependencies": {
     "telegram": "../../integrations/telegram",
-    "linear": "../../integrations/linear"
+    "linear": "../../integrations/linear",
+    "synchronizer": "../../plugins/synchronizer"
   }
 }
