--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
     },
     "build": {
       "outputs": ["bp_modules/**", ".botpress/**"],
-      "dependsOn": ["generate", "^build"]
+      "dependsOn": ["generate", "^build"],
+      "env": ["BP_*"]
     },
     "@botpress/client#build": {
       "outputs": ["dist/**"],
