--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,32 +6,57 @@
 
 # Client, SDK, CLI
 /packages @botpress/cloud-services
-/packages/cli/src/linter @pascal-botpress @botpress/cloud-services
 
 # Bots
 /packages/bots @franklevasseur
 
+# Plugins
+/plugins @botpress/cloud-services
+
 # Integrations
+## Utils
 /integrations/browser @allardy @botpress/cloud-services
 /integrations/charts @allardy @botpress/cloud-services
-/integrations/dalle @franklevasseur @botpress/cloud-services
-/integrations/github @pascal-botpress @botpress/cloud-services
-/integrations/gmail @michaelmass @pascal-botpress @botpress/cloud-services
-/integrations/googlecalendar @franklevasseur @pascal-botpress @botpress/cloud-services
+/integrations/pdf-generator @allardy @botpress/cloud-services
+
+## LLM
+/integrations/anthropic @AbrahamLopez10 @botpress/cloud-services
+/integrations/cerebras @AbrahamLopez10 @botpress/cloud-services
+/integrations/fireworks-ai @AbrahamLopez10 @botpress/cloud-services
+/integrations/google-ai @AbrahamLopez10 @botpress/cloud-services
 /integrations/groq @AbrahamLopez10 @botpress/cloud-services
-/integrations/gsheets @franklevasseur @pascal-botpress @botpress/cloud-services
-/integrations/intercom @chsir17 @ptrckbp @botpress/cloud-services
-/integrations/linear @allardy @botpress/cloud-services
-/integrations/notion @lakshya0246 @botpress/cloud-services
 /integrations/openai @AbrahamLopez10 @botpress/cloud-services
-/integrations/pdf-generator @lakshya0246 @botpress/cloud-services
-/integrations/slack @michaelmass @pascal-botpress @botpress/cloud-services
+
+## Others
+/integrations/airtable @pascal-botpress @botpress/cloud-services
+/integrations/asana @SebastienPoitras @botpress/cloud-services
+/integrations/chat @franklevasseur @botpress/cloud-services
+/integrations/clickup @franklevasseur @botpress/cloud-services
+/integrations/dropbox @pascal-botpress @botpress/cloud-services
+/integrations/freshchat @SebastienPoitras @botpress/cloud-services
+/integrations/github @pascal-botpress @botpress/cloud-services
+/integrations/gmail @pascal-botpress @botpress/cloud-services
+/integrations/googlecalendar @pascal-botpress @botpress/cloud-services
+/integrations/googledrive @pascal-botpress @botpress/cloud-services
+/integrations/gsheets @pascal-botpress @botpress/cloud-services
+/integrations/instagram @SebastienPoitras @botpress/cloud-services
+/integrations/intercom @SebastienPoitras @botpress/cloud-services
+/integrations/line @SebastienPoitras @botpress/cloud-services
+/integrations/linear @franklevasseur @botpress/cloud-services
+/integrations/mailchimp @SebastienPoitras @botpress/cloud-services
+/integrations/messenger @SebastienPoitras @botpress/cloud-services
+/integrations/notion @pascal-botpress @botpress/cloud-services
+/integrations/slack @pascal-botpress @botpress/cloud-services
+/integrations/stripe @SebastienPoitras @botpress/cloud-services
+/integrations/sunco @SebastienPoitras @botpress/cloud-services
 /integrations/teams @franklevasseur @botpress/cloud-services
 /integrations/telegram @franklevasseur @botpress/cloud-services
+/integrations/todoist @SebastienPoitras @botpress/cloud-services
 /integrations/trello @pascal-botpress @botpress/cloud-services
-/integrations/twilio @AbrahamLopez10 @botpress/cloud-services
+/integrations/twilio @SebastienPoitras @botpress/cloud-services
+/integrations/viber @SebastienPoitras @botpress/cloud-services
+/integrations/vonage @SebastienPoitras @botpress/cloud-services
 /integrations/webhook @franklevasseur @botpress/cloud-services
-/integrations/whatsapp @AbrahamLopez10 @botpress/cloud-services
-/integrations/zapier @AbrahamLopez10 @botpress/cloud-services
-/integrations/zendesk @davidvitora @franklevasseur @botpress/cloud-services
-/integrations/freshchat @davidvitora
+/integrations/whatsapp @SebastienPoitras @botpress/cloud-services
+/integrations/zapier @SebastienPoitras @botpress/cloud-services
+/integrations/zendesk @franklevasseur @botpress/cloud-services
