--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
     },
     "build": {
       "outputs": ["bp_modules/**", ".botpress/**"],
-      "dependsOn": ["^generate", "^build"]
+      "dependsOn": ["generate", "^build"]
     },
     "@botpress/client#build": {
       "outputs": ["dist/**"],
