--- a/packages/cognitive/package.json
+++ b/packages/cognitive/package.json
@@ -7,12 +7,12 @@
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "check:type": "pnpm generate-types && tsc --noEmit",
-    "generate-types": "ts-node -T ./types.ts",
+    "check:type": "tsc --noEmit",
+    "generate": "ts-node -T ./types.ts ./src/gen",
     "build:type": "tsup ./src/index.ts --dts-resolve --dts-only --clean",
     "build:neutral": "ts-node -T ./build.ts --neutral",
-    "build": "pnpm generate-types && pnpm build:type && pnpm build:neutral && size-limit",
-    "test": "vitest"
+    "build": "pnpm build:type && pnpm build:neutral && size-limit",
+    "test:e2e": "vitest run --dir ./src/__tests__/"
   },
   "size-limit": [
     {
@@ -29,8 +29,8 @@
     "nanoevents": "^9.1.0"
   },
   "devDependencies": {
-    "@botpress/client": "workspace:^",
-    "@botpress/common": "workspace:^",
+    "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@bpinternal/zui": "0.12.0",
     "@size-limit/file": "^11.1.6",
     "@types/axios": "^0.14.4",
