--- a/packages/cognitive/package.json
+++ b/packages/cognitive/package.json
@@ -9,10 +9,10 @@
   "scripts": {
     "check:type": "tsc --noEmit",
     "generate": "ts-node -T ./types.ts ./src/gen",
-    "build:type": "tsup ./src/index.ts --dts-resolve --dts-only --clean",
+    "build:type": "tsup --tsconfig tsconfig.build.json ./src/index.ts --dts-resolve --dts-only --clean",
     "build:neutral": "ts-node -T ./build.ts --neutral",
     "build": "pnpm build:type && pnpm build:neutral && size-limit",
-    "test:e2e": "vitest run --dir ./src/__tests__/"
+    "test:e2e": "vitest run --dir ./__tests__/e2e"
   },
   "size-limit": [
     {
