--- a/packages/cognitive/tsconfig.json
+++ b/packages/cognitive/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "rootDir": "src",
-    "outDir": "dist",
-    "lib": ["es2022", "dom"]
+    "baseUrl": "."
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "./__tests__/**/*"]
 }
