--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -6,6 +6,6 @@
     "esModuleInterop": true,
     "sourceMap": true
   },
-  "include": ["./src/**/*", "./__tests__/**/*"],
+  "include": ["./src/**/*", "./e2e/**/*"],
   "exclude": ["./templates/**"]
 }
