--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,15 +13,13 @@
   },
   "scripts": {
     "check:type": "tsc --noEmit",
-    "build:type": "tsup ./src/index.ts --dts-resolve --dts-only",
+    "build:type": "tsup --tsconfig tsconfig.build.json ./src/index.ts --dts-resolve --dts-only",
     "build:browser": "ts-node -T ./build.ts --browser",
     "build:node": "ts-node -T ./build.ts --node",
     "build:bundle": "ts-node -T ./build.ts --bundle",
     "build": "pnpm build:type && pnpm build:node && pnpm build:browser && pnpm build:bundle",
     "generate": "ts-node ./openapi.ts",
-    "test:manual": "vitest tests/manual/file-upload",
-    "test:e2e": "ts-node -T ./tests/e2e/node.ts",
-    "test": "pnpm run test:e2e"
+    "test:e2e": "ts-node -T ./e2e/node.ts"
   },
   "dependencies": {
     "axios": "^1.6.1",
