chore: update depsynky

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run generate && turbo run build",
-    "bump": "depsynky bump && pnpm -w install",
+    "bump": "depsynky bump --ignore-dev && pnpm -w install",
     "test": "vitest --run",
     "check:bplint": "turbo check:bplint",
     "check:dep": "depsynky check --ignore-dev",
@@ -13,7 +13,7 @@
     "check:oxlint": "oxlint -c .oxlintrc.json",
     "check:lint": "pnpm check:bplint && pnpm check:oxlint && pnpm check:eslint",
     "check:type": "turbo check:type",
-    "fix:dep": "depsynky sync",
+    "fix:dep": "depsynky sync --ignore-dev",
     "fix:sherif": "sherif -i zod -i axios -i query-string -i googleapis --fix",
     "fix:format": "prettier --write .",
     "fix:oxlint": "oxlint -c .oxlintrc.json --fix --fix-suggestions",
@@ -26,7 +26,7 @@
     "@botpress/cli": "workspace:*",
     "@botpress/client": "workspace:*",
     "@botpress/sdk": "workspace:*",
-    "@bpinternal/depsynky": "^0.0.2",
+    "@bpinternal/depsynky": "^0.1.0",
     "@bpinternal/readiness": "^0.0.16",
     "@stylistic/eslint-plugin": "^2.12.1",
     "@types/node": "^18.19.67",
